# rust-app-actix

./: Cargo.toml  Makefile  leapcell.yaml
src/: main.rs
src-rs/: lib.rs
src-rs/controllers/: greeting_controller.rs  hello_controller.rs  mod.rs  open_router_controller.rs  user_controller.rs
src-rs/helpers/: base_response.rs  logger.rs  mod.rs
src-rs/routes/: index.rs
